# flask_demo

./: pyproject.toml
flask_demo/: main.py
