[tool.poetry]
name = "flask_demo"
version = "0.1.0"
description = ""
authors = ["Alexey Petrov <ruddy22@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
